# sklearn-mcp

./: README.md  linear_reg.py  main.py  pyproject.toml  server.py
