[project]
name = "sklearn-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.3",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.1",
    "mcp>=1.10.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
]
